--- a/examples/yproxy.yaml
+++ b/examples/yproxy.yaml
@@ -2,5 +2,6 @@ socket_path: "/tmp/yezzey.sock"
 
 storage:
   storage_endpoint: "https://storage.yandexcloud.net"
-  storage_prefix: "s3://gpyezzey/wal-e/6/"
+  storage_prefix: "wal-e/6/"
   storage_bucket: "gpyezzey"
+  storage_region: "us-west-2"
