--- a/examples/yproxy.yaml
+++ b/examples/yproxy.yaml
@@ -1,7 +1,9 @@
-socket_path: "/tmp/yezzey.sock"
+socket_path: "examples/yproxy.sock"
+interconnect_socket_path: "examples/gool.sock"
+
 
 storage:
   storage_endpoint: "https://storage.yandexcloud.net"
   storage_prefix: "wal-e/6/"
-  storage_bucket: "gpyezzey"
+  storage_bucket: "yezzey3"
   storage_region: "us-west-2"
